cours-m1/cours-m1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cours-m1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cours-m1
  template:
    metadata:
      labels:
        app: cours-m1
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/cours-m1-backend:main
        name: cours-m1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 5000Mi
      imagePullSecrets:
      - name: github
