cours-m1/cours-m1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cours-m1-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cours-m1
