cours-m1/cours-m1-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cours-m1-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`m1.dysnomia.studio`)
    kind: Rule
    services:
    - name: cours-m1-svc
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: le
